--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,71 @@ UpgradeLog*.htm
 
 # Microsoft Fakes
 FakesAssemblies/
+
+
+#==============================================================================
+# HolisticWare
+#	https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
+#	http://stackoverflow.com/questions/2143956/gitignore-for-visual-studio-projects-and-solutions
+#	
+
+
+# MacOSX
+**/*.DS_Store
+**/.DS_Store
+
+**/.svn*
+**/.git*
+**/.git.*
+**/.git.*/*
+
+**/Components/
+**/packages/
+
+#----------------------------------------------
+**/*.hidden.cs
+**/*.hidden.md
+**/*.hidden.sh
+**/*.hidden.bat
+**/*.hidden.cmd
+**/*.secure*.cs
+**/*.secure*.md
+**/*.secure*.sh
+**/*.secure*.bat
+**/*.secure*.cmd
+**/*.secret*.cs
+**/*.secret*.md
+**/*.secret*.sh
+**/*.secret*.bat
+*/*.secret*.cmd
+
+**/*.data.bat
+**/*.data.sh
+**/*.secure.data.md
+**/*.data.md
+**/*.secured.md
+**/*.secured.md
+**/*.secure*
+**/*.data.*
+
+# Xamarin Studio
+**/*.userprefs
+
+# Security (project id etc)
+#**/AndroidManifest.xml
+
+docs/workspace/sharpen/**
+
+src/samples/Components/**
+**/UpgradeLog.htm
+
+/docs/ubertesters.sdk.ios %
+
+
+#------------------------------------------
+# iOS build files
+**DerivedData**
+**build**
+lib/**
+#------------------------------------------
+#==============================================================================
